# AdventOfCode

./: .gitignore  AdventOfCode2015.cpp  AdventOfCode2016.cpp  AdventOfCode2017.cpp  AdventOfCode2018.cpp  AdventOfCode2019.cpp  CMakeLists.txt  CMakeSettings.json  LICENSE  ProjectFiles.cmake  launch.vs.json  todo.txt
CMake/modules/: FindZeno.cmake
app/: CMakeLists.txt  main.cpp
include/2015/: Day01Puzzle.hpp  Day02Puzzle.hpp  Day03Puzzle.hpp  Day04Puzzle.hpp  Day05Puzzle.hpp  Day06Puzzle.hpp  Day07Puzzle.hpp  Day08Puzzle.hpp  Day10Puzzle.hpp  Day11Puzzle.hpp  Day12Puzzle.hpp  Day15Puzzle.hpp  Day16Puzzle.hpp  Day17Puzzle.hpp  Day20Puzzle.hpp  Day21Puzzle.hpp  Day24Puzzle.hpp  Day25Puzzle.hpp
include/2016/: Day01Puzzle.hpp  Day02Puzzle.hpp  Day04Puzzle.hpp  Day05Puzzle.hpp  Day06Puzzle.hpp  Day07Puzzle.hpp  Day08Puzzle.hpp  Day09Puzzle.hpp  Day11Puzzle.hpp  Day12Puzzle.hpp  Day13Puzzle.hpp  Day14Puzzle.hpp  Day15Puzzle.hpp  Day16Puzzle.hpp  Day18Puzzle.hpp  Day19Puzzle.hpp
include/2018/: Cart.hpp  Cave.hpp  Day03Puzzle.hpp  Day04Puzzle.hpp  Day05Puzzle.hpp  Day06Puzzle.hpp  Day07Puzzle.hpp  Day08Puzzle.hpp  Day09Puzzle.hpp  Day10Puzzle.hpp  Day11Puzzle.hpp  Day12Puzzle.hpp  Day13Puzzle.hpp  Day14Puzzle.hpp  Day15Puzzle.hpp  Day16Puzzle.hpp  Day17Puzzle.hpp  Day18Puzzle.hpp  Day19Puzzle.hpp  Day20Puzzle.hpp  Day21Puzzle.hpp  Day22Puzzle.hpp  Day23Puzzle.hpp  Day24Puzzle.hpp  Day25Puzzle.hpp  Entity.hpp  Gaurd.hpp  Marble.hpp  MetadataNode.hpp  Nanobot.hpp  Note.hpp  ParsedClayVein.hpp  Pot.hpp  RegisterInstruction.hpp  RegisterMachine.hpp  TrainingRegisterInstruction.hpp
include/2019/: Day01Puzzle.hpp  Day03Puzzle.hpp  Day04Puzzle.hpp  Day07Puzzle.hpp  Day14Puzzle.hpp  Day15Puzzle.hpp  Day17Puzzle.hpp  Day18Puzzle.hpp  Day21Puzzle.hpp  Day24Puzzle.hpp  IntcodeMachine.hpp
include/Core/: IPuzzleBase.hpp  InitialisationInfo.hpp  Orientation.hpp  Pathfinding.hpp  PuzzleConstructor.hpp  Region.hpp  States.hpp  StringExtensions.hpp  Vector2.hpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/year2015/: CMakeLists.txt
lib/year2016/: CMakeLists.txt
lib/year2017/: CMakeLists.txt
lib/year2018/: CMakeLists.txt
lib/year2019/: CMakeLists.txt
lib/year2020/: CMakeLists.txt
scripts/: generateSkeleton.py
src/2015/: Day01Puzzle.cpp  Day02Puzzle.cpp  Day03Puzzle.cpp  Day04Puzzle.cpp  Day05Puzzle.cpp  Day06Puzzle.cpp  Day07Puzzle.cpp  Day08Puzzle.cpp  Day09Puzzle.cpp  Day10Puzzle.cpp  Day11Puzzle.cpp  Day12Puzzle.cpp  Day14Puzzle.cpp  Day15Puzzle.cpp  Day16Puzzle.cpp  (+5 more)
test/: CMakeLists.txt
test/2015/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2016/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2017/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2018/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2019/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2020/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/Core/: CMakeLists.txt  PathfindingTests.cpp  RegionTests.cpp  StatesTests.cpp
(+284 files in other folders)
