CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(AdventOfCode)

SET(CMAKE_CXX_STANDARD 17)

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL ${MSVC})
	MESSAGE(STATUS "Microsoft system/compiler detected")
	ADD_DEFINITIONS(-DNOMINMAX -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_DEPRECATE)

	SET(SFML_ROOT "C:/Libraries/SFML-2.4.2")
	SET(SFML_STATIC_LIBRARIES TRUE)

ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	${CMAKE_SOURCE_DIR}/cmake_modules
)

# Currently always making static LOCAL_LIBS
SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")

# Determine what type of library (Debug/Release) to build
IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Debug)
    set(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

ELSE(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Release")
    #set(CMAKE_BUILD_TYPE Release)
	SET(CMAKE_BUILD_TYPE RelWithDebInfo )
ENDIF()
#

INCLUDE(${CMAKE_SOURCE_DIR}/ProjectFiles.cmake)

FIND_PACKAGE(SFML 2 REQUIRED graphics window system)
IF(NOT SFML_FOUND)
	MESSAGE( FATAL_ERROR "Could not find SFML 2.X" )
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/)

ADD_LIBRARY(Puzzles2015${LIBRARY_EXTENSION}				STATIC	${2015_PUZZLES_HEADER_FILES}			${2015_PUZZLES_SOURCE_FILES})
ADD_LIBRARY(Puzzles2016${LIBRARY_EXTENSION}				STATIC	${2016_PUZZLES_HEADER_FILES}			${2016_PUZZLES_SOURCE_FILES})
ADD_LIBRARY(Puzzles2018${LIBRARY_EXTENSION}				STATIC	${2018_PUZZLES_HEADER_FILES}			${2018_PUZZLES_SOURCE_FILES})
ADD_LIBRARY(Puzzles2019${LIBRARY_EXTENSION}				STATIC	${2019_PUZZLES_HEADER_FILES}			${2019_PUZZLES_SOURCE_FILES})
ADD_LIBRARY(Core${LIBRARY_EXTENSION}					STATIC	${CORE_HEADER_FILES}					${CORE_SOURCE_FILES})

SET(LOCAL_LIBS ${LOCAL_LIBS}
	Puzzles2015${LIBRARY_EXTENSION}
	Puzzles2016${LIBRARY_EXTENSION}
	Puzzles2018${LIBRARY_EXTENSION}
	Puzzles2019${LIBRARY_EXTENSION}
	Core${LIBRARY_EXTENSION}
)

SET(ALL_LIBS ${ALL_LIBS}
	${LOCAL_LIBS}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
)

GET_DIRECTORY_PROPERTY( CompileDefinitions DIRECTORY ${CMAKE_SOURCE_DIR} COMPILE_DEFINITIONS )
FOREACH( d ${CompileDefinitions} )
    MESSAGE( STATUS "Definition: " ${d} )
ENDFOREACH()
FOREACH( l ${THIRD_PARTY_LIBS} )
    MESSAGE( STATUS "Third Party Library: " ${l} )
ENDFOREACH()
FOREACH( l ${LOCAL_LIBS} )
    MESSAGE( STATUS "Local Library: " ${l} )
ENDFOREACH()
FOREACH( l ${SFML_DEPENDENCIES} )
    MESSAGE( STATUS "SFML Dependency: " ${l} )
ENDFOREACH()

ADD_EXECUTABLE(AdventOfCode2016 AdventOfCode2016.cpp)
TARGET_LINK_LIBRARIES(AdventOfCode2016 LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2015 AdventOfCode2015.cpp)
TARGET_LINK_LIBRARIES(AdventOfCode2015 LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2018 AdventOfCode2018.cpp)
TARGET_LINK_LIBRARIES(AdventOfCode2018 LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2019 AdventOfCode2019.cpp)
TARGET_LINK_LIBRARIES(AdventOfCode2019 LINK_PUBLIC ${ALL_LIBS})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/test/include)

ADD_EXECUTABLE(CoreTest test/CoreTest.cpp ${CORE_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(CoreTest LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2016Test test/AdventOfCode2016Test.cpp ${2016_PUZZLES_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(AdventOfCode2016Test LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2015Test test/AdventOfCode2015Test.cpp ${2015_PUZZLES_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(AdventOfCode2015Test LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2018Test test/AdventOfCode2018Test.cpp ${2018_PUZZLES_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(AdventOfCode2018Test LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(AdventOfCode2019Test test/AdventOfCode2019Test.cpp ${2019_PUZZLES_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(AdventOfCode2019Test LINK_PUBLIC ${ALL_LIBS})

ENABLE_TESTING()
ADD_TEST(NAME CoreTest COMMAND Test)
ADD_TEST(NAME AdventOfCode2015Test COMMAND Test)
ADD_TEST(NAME AdventOfCode2016Test COMMAND Test)
ADD_TEST(NAME AdventOfCode2018Test COMMAND Test)
ADD_TEST(NAME AdventOfCode2019Test COMMAND Test)

FILE(COPY ${CMAKE_SOURCE_DIR}/data DESTINATION ${CMAKE_BINARY_DIR})