CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

cmake_policy(SET CMP0074 NEW)

PROJECT(AdventOfCode 
	VERSION 1
	LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake/modules")
FIND_PACKAGE(ZENO REQUIRED COMPONENTS CORE UTILITY)

add_library(zeno INTERFACE)
target_link_libraries(zeno INTERFACE ${ZENO_LIBRARIES})
target_link_libraries(zeno INTERFACE ${ZENO_DEPENDENCIES})
target_include_directories(zeno INTERFACE ${ZENO_INCLUDE_DIR})

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)