SET(TestMain "advent-of-code-test")

FILE(GLOB_RECURSE CORE_LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp")
FILE(GLOB_RECURSE 2015_LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/2015/*.cpp")
FILE(GLOB_RECURSE 2016_LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/2016/*.cpp")
FILE(GLOB_RECURSE 2017_LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/2017/*.cpp")
FILE(GLOB_RECURSE 2018_LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/2018/*.cpp")
FILE(GLOB_RECURSE 2019_LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/2019/*.cpp")

ADD_EXECUTABLE(${TestMain} "main.cpp")
TARGET_SOURCES(${TestMain} PRIVATE 
	${CORE_LIB_TEST_FILES}
	${2015_LIB_TEST_FILES}
	${2016_LIB_TEST_FILES}
	${2017_LIB_TEST_FILES}
	${2018_LIB_TEST_FILES}
	${2019_LIB_TEST_FILES}
)
TARGET_LINK_LIBRARIES(${TestMain} PRIVATE advent-of-code-core)
TARGET_LINK_LIBRARIES(${TestMain} PRIVATE advent-of-code-year2015)
TARGET_LINK_LIBRARIES(${TestMain} PRIVATE advent-of-code-year2016)
TARGET_LINK_LIBRARIES(${TestMain} PRIVATE advent-of-code-year2017)
TARGET_LINK_LIBRARIES(${TestMain} PRIVATE advent-of-code-year2018)
TARGET_LINK_LIBRARIES(${TestMain} PRIVATE advent-of-code-year2019)
TARGET_INCLUDE_DIRECTORIES(${TestMain} PUBLIC "${PROJECT_SOURCE_DIR}/thirdparty/catch/include")
SET_PROPERTY(TARGET ${TestMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${TestMain} PROPERTY CXX_STANDARD_REQUIRED ON)

include(CTest)
include("${PROJECT_SOURCE_DIR}/thirdparty/catch/contrib/ParseAndAddCatchTests.cmake")
ParseAndAddCatchTests(${TestMain})